- He metido un target que es "_xx_ETAPAS" en relación con el tema de visualizar y modificar etapas.
- Se prepara el esqueleto de llamadas entre VerEtapas y MenuMisEtapas a la hora de visualizar las opciones del menú sobre un diálogo y obtener la respuesta en un callback:

Mirar cómo pasar parámetros en el callback de vuelta del diálogo: CloseDialogCallback   Done!!   Se hace así:
- Abrir el diálogo:
  _dialogService.ShowDialog("MenuMisEtapas", param1, CloseDialogCallback);
- En el OnDialogOpened se reciben esos parámetros param1:
  etapa = parameters.GetValue<Etapa>("etapa");
- Y luego, desde una de las DelegateCommand que atienden cada una de las opciones mostradas en el diálogo se hace esto para devolver al callback incial los parámetros que queramos:
  listaSTR_Etapas = listaSTR_Etapas + "Deseiro;Aldrei;";
  DialogParameters param = new DialogParameters();
  param.Add("listaEtapas", listaSTR_Etapas);
  RequestClose(param);
- En el callback del que llama, es decir, en CloseDialogCallback() leeré esos parámetros devueltos así:
  bool hayCambios = obj.Parameters.GetValue<bool>("hayCambios");
  string nuevaListaEtapas = obj.Parameters.GetValue<string>("listaEtapas");

- En Global.cs he introducido la cadena estática "nombreFicheroDeMiCamino" donde se supone que guardaré el nombre del camino que estoy manejando a la hora de modificar y guardar las etapas.

- En RellenarLista, cuando no se recarga la lista desde la BD, lo que sí se hace es actualizar la información sobre qué nodos son etapa o no.

- En VerEtapasVM se añade la variable miTMC.
También se implementa el DelegateCommand asociado a OpcionesSobreEtapa.
Se prepara el callback CloseDialogCallback() que será invocado al volver del diálogo "MenuMisEtapas".

- Se cambia el nombre de CellMiCamino por CellMisCaminos

--- a/YPA/Dialogs/MenuMisEtapas.xaml
+++ b/YPA/Dialogs/MenuMisEtapas.xaml
@@ -1,20 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<!--
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d"
-             x:Class="YPA.Dialogs.MenuMisEtapas">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
-</ContentPage>
--->
 
 <Frame xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
@@ -29,10 +13,10 @@
                  BackgroundColor="#F8EDED" HeightRequest="300" WidthRequest="250"
                  VerticalOptions="Center" Padding="4,0" Spacing="0">
 
-        <Button Text="Insertar día al inicio" HorizontalOptions="Center"  Command="{Binding CloseCommand}" />
-        <Button Text="Añadir día al final" HorizontalOptions="Center"  Command="{Binding PrintCommand}" />
+        <Button Text="Insertar día al inicio" HorizontalOptions="Center"  Command="{Binding InsertarDiaAlInicio}" />
+        <Button Text="Añadir día al final" HorizontalOptions="Center"  Command="{Binding CloseCommand}" />
         <Button Text="Dividir esta etapa en varias" HorizontalOptions="Center"  Command="{Binding CloseCommand}" />
-        <Button Text="Unir esta etapa y la siguiente" HorizontalOptions="Center"  Command="{Binding PrintCommand}" />
+        <Button Text="Unir esta etapa y la siguiente" HorizontalOptions="Center"  Command="{Binding CloseCommand}" />
         <Button Text="CLOSE" HorizontalOptions="Center"  Command="{Binding CloseCommand}" />
 
     </StackLayout>
