- DialogoMiCaminoVM.cs: En el OnDialogOpenened() ahora se recibe como parámetro un "miCamino" e  invoco al método DameListaEtapas()
- MenuMisEtapas.xaml: Ahora la altura del menú mostrado es autoconfigurable según vaya a mostrar o no la opción de Unir dos etapas (no tiene sentido si se ha pinchado en la última etapa). Para ver si sse muestra esa opción utilizamos "botonUnirVisible".

- MenuMisEtapasVM:  Se añade la interfaz INotifyPropertyChanged para controlar los cambios de botonUnirVisible.

- Tablas.cs: El campo esEtapa de la tabla TablaBaseCaminos pasa de ser de tipo bool a ser de tipo byte. También se añade el campo "checkboxEnabled" para marcar los nodos inicio y fin de cada etapa para que no puedan ser modificados cuando desde un camino concreto se visualizan las etapas y se pincha sobre una de ellas para que se vean todos los puntos de paso. Pues bien, el checkbox de los puntos de paso inicial y final aparecerán marcados y no podrán ser modificados desde esa pantalla (a la hora de dividir una etapa en varias).

- Global.cs: Se añade la variable global "subetapasModificadas" que permite saber si una etapa ha sido dividida en varias etapas y posteriormente se han guardado los cambios. Entonces, al volver a VerEtapas, si no es null significará que contiene el nuevo listado de etapas con el que se repintará el listado de etapas.
También se ha añadido el campo "orden" a la clase Etapa.

- MiCamino.cs: Además de la variable numEtapas, ahora también tenemos la variable numDias (ya que en una localidad se puede estar varios días).
Al haber hecho "esEtapa" del tipo byt, se adaptan algúnos métodos como: DameStringListaEtapas(), SetEtapasInLista(), DameListaEtapas(), RellenarLista(), MasajearLista(), ExecuteCheckPulsado().
RellenarLista() vuelve a dejar de tener argumentos. Ya no recibe como argumentos opcionales el nodo inicial y final de una etapa.
En MasajearLista() se hace un tratamiento especial cuando recibimos los parámetros "primerNodoEtapa" y "ultimoNodoEtapa

--- a/YPA/Dialogs/MenuMisEtapas.xaml
+++ b/YPA/Dialogs/MenuMisEtapas.xaml
@@ -10,13 +10,13 @@
              x:Class="YPA.Dialogs.MenuMisEtapas">
 
     <StackLayout Orientation="Vertical"
-                 BackgroundColor="#F8EDED" HeightRequest="300" WidthRequest="250"
+                 BackgroundColor="#F8EDED" HeightRequest="{Binding alturaMenu}" WidthRequest="250"
                  VerticalOptions="Center" Padding="4,0" Spacing="0">
 
         <Button Text="Insertar día al inicio" HorizontalOptions="Center"  Command="{Binding InsertarDiaAlInicio}" />
-        <Button Text="Añadir día al final" HorizontalOptions="Center"  Command="{Binding CloseCommand}" />
+        <Button Text="Añadir día al final" HorizontalOptions="Center"  Command="{Binding InsertarDiaAlFinal}" />
         <Button Text="Dividir esta etapa en varias" HorizontalOptions="Center"  Command="{Binding CloseCommand}" />
-        <Button Text="Unir esta etapa y la siguiente" HorizontalOptions="Center"  Command="{Binding CloseCommand}" />
+        <Button Text="Unir esta etapa y la siguiente" HorizontalOptions="Center"  Command="{Binding UnirEtapas}"  IsVisible="{Binding botonUnirVisible}" />
         <Button Text="CLOSE" HorizontalOptions="Center"  Command="{Binding CloseCommand}" />
 
     </StackLayout>
