--- a/YPA/Views/VerEtapas.xaml
+++ b/YPA/Views/VerEtapas.xaml
@@ -4,11 +4,12 @@
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
              xmlns:local="clr-namespace:YPA.Views.DataTemplates"
-             x:Class="YPA.Views.VerEtapas">
+             x:Class="YPA.Views.VerEtapas"
+             Title="VerEtapas">
 
     <ContentPage.ToolbarItems>
         <!-- <ToolbarItem Text="+"  Clicked="OnNoteAddedClicked" CommandParameter="prueba" /> -->
-        <ToolbarItem Text="GUARDAR"  Command="{Binding AddMiCaminoClicked,FallbackValue=Funcion no definida}"
+        <ToolbarItem Text="GUARDAR"  Command="{Binding GuardarCamino,FallbackValue=Funcion no definida}"
                                CommandParameter="NO ESTA CONFIGURADO!!!!!" />
     </ContentPage.ToolbarItems>
 
