- Se elimina código que estaba comentado y que ya no vale para nada.
- Es posible que vaya un icono nuevo que es "ic_grbar.png" para la TooBarItem de VerEtapas.

--- a/YPA/Views/VerEtapas.xaml
+++ b/YPA/Views/VerEtapas.xaml
@@ -9,7 +9,7 @@
 
     <ContentPage.ToolbarItems>
         <!-- <ToolbarItem Text="+"  Clicked="OnNoteAddedClicked" CommandParameter="prueba" /> -->
-        <ToolbarItem Text="GUARDAR"  Command="{Binding GuardarCamino,FallbackValue=Funcion no definida}"
+        <ToolbarItem Text="GUARDAR"  IconImageSource="ic_grabar.png" Command="{Binding GuardarCamino,FallbackValue=Funcion no definida}"
                                CommandParameter="NO ESTA CONFIGURADO!!!!!" />
     </ContentPage.ToolbarItems>
 
