- Database.cs: Se añaden las tablas TablaCaminoDelNorte y TablaPrimitivo;
- DialogoMiCaminoVM: En el ExecutePrint se ha probado a listar los recursos de assembly.GetManifestResourceNames();

- En el directorio "Images" se añaden los iconos para las poblaciones: albergues, cajero, farmacia, fuente, hospital, bus, tren, etc...

- Tablas.cs: En el constructor de TablaBaseCaminos() nos aseguramos de que primero se inicializa el campo "id" y luego se llama a Init();

- Global.cs: Se añade el método DameImageSourceConverter() que es un Converter para cargar el icono correspondiente desde el "CellPoblacion.xaml";

- MiCamino.cs:
  * Solución de un problemilla en DameListaEtapas():  Cuando entraba en uno de mis caminos, al dar sobre la primera etapa al botón "+" y luego elegir "Añadir un día al principio".... Me está añadiendo 3 días de golpe !!!!!! Añade tantos días repetidos como nodos intermedios tenía esa etapa.
El problema estaba en MiCamino::DameListaEtapas()   que he tenido que añadir un "continue" justo despues del "for" que hay dentro del "if (esPrimeraEtapa");
* Mejoras en RellenarLista();
* En RellenarLista(): La variable estamosEnBifurcacion pasa de ser un bool a ser un int. También se soluciona una excepción que saltaba al parsear una cadena a double cuando la cadena era vacía o no era un número;
* En ExecuteCheckPulsado(), al calcular el acumuladoEtapa sólo coge un decimal (usando Math.Round()). Es que a veces salían valores como 15.900000001;

- VerCaminoVM.cs: primerNodoEtapa y ultimoNodoEtapa pasan a ser miembros de la clase VerCaminoVM y luego se utilizan al llamar a MasajearLista() desde la opción 3 de OnNavigatedTo();

- VerVM.cs:  Se añade el titulo;

- CellPoblacion.xaml: Se sustituyen los checkbox por Image (que cargan  los iconos mediante el Converter "dameImageSourceConverter");

--- a/YPA/Dialogs/MenuMisEtapas.xaml
+++ b/YPA/Dialogs/MenuMisEtapas.xaml
@@ -13,10 +13,10 @@
                  BackgroundColor="#F8EDED" HeightRequest="{Binding alturaMenu}" WidthRequest="250"
                  VerticalOptions="Center" Padding="4,0" Spacing="0">
 
-        <Button Text="Insertar día al inicio" HorizontalOptions="Center"  Command="{Binding InsertarDiaAlInicio}" />
-        <Button Text="Añadir día al final" HorizontalOptions="Center"  Command="{Binding InsertarDiaAlFinal}" />
-        <Button Text="Unir esta etapa y la siguiente" HorizontalOptions="Center"  Command="{Binding UnirEtapas}"  IsVisible="{Binding botonUnirVisible}" />
-        <Button Text="CLOSE" HorizontalOptions="Center"  Command="{Binding CloseCommand}" />
+        <Button Text="Insertar día al inicio" HeightRequest="50" WidthRequest="220" HorizontalOptions="CenterAndExpand"  Command="{Binding InsertarDiaAlInicio}" />
+        <Button Text="Añadir día al final" HeightRequest="50" WidthRequest="220" HorizontalOptions="CenterAndExpand"  Command="{Binding InsertarDiaAlFinal}" />
+        <Button Text="Unir esta etapa y la siguiente" HeightRequest="50" WidthRequest="220" HorizontalOptions="CenterAndExpand"  Command="{Binding UnirEtapas}"  IsVisible="{Binding botonUnirVisible}" />
+        <Button Text="CLOSE" MinimumWidthRequest="100" HorizontalOptions="CenterAndExpand"  Command="{Binding CloseCommand}" />
 
     </StackLayout>
     
