--- a/YPA/Views/VerCamino.xaml
+++ b/YPA/Views/VerCamino.xaml
@@ -13,13 +13,15 @@
 
     
     <ContentPage.ToolbarItems>
-        <ToolbarItem Name="Guardar"
+        <ToolbarItem Name="Guardar" IconImageSource="ic_grabar"
                  Command="{Binding GuardarCamino}"  >
+            <!--
             <ToolbarItem.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource"
                     Android="plus"
                     WinPhone="Assets/add.png" />
             </ToolbarItem.Icon>
+            -->
         </ToolbarItem>
     </ContentPage.ToolbarItems>
     <!--
@@ -89,8 +91,9 @@
 
         <ListView x:Name="listView"   
               ItemsSource="{Binding listaPuntosDePaso, Mode=TwoWay}"
-              IsGroupingEnabled="False" 
-              RowHeight="35" SeparatorVisibility="None" BackgroundColor="#90F5EB" >
+              IsGroupingEnabled="False"
+              RowHeight="35" SeparatorVisibility="None" BackgroundColor="red" HeightRequest="90" >
+            <!-- ="35" SeparatorVisibility="None" BackgroundColor="#90F5EB" > -->
             <!--
             <ListView.Behaviors>
                 <prism:EventToCommandBehavior EventName="ItemTapped"
