--- a/YPA/Views/VerEtapas.xaml
+++ b/YPA/Views/VerEtapas.xaml
@@ -8,9 +8,9 @@
              Title="VerEtapas">
 
     <ContentPage.ToolbarItems>
-        <!-- <ToolbarItem Text="+"  Clicked="OnNoteAddedClicked" CommandParameter="prueba" /> -->
-        <ToolbarItem Text="GUARDAR"  IconImageSource="ic_grabar.png" Command="{Binding GuardarCamino,FallbackValue=Funcion no definida}"
-                               CommandParameter="NO ESTA CONFIGURADO!!!!!" />
+        <ToolbarItem Text="GUARDAR"  IconImageSource="ic_grabar" 
+                     Command="{Binding GuardarCamino,FallbackValue=Funcion no definida}"
+                     CommandParameter="NO ESTA CONFIGURADO!!!!!" />
     </ContentPage.ToolbarItems>
 
 
