--- a/YPA/Views/VerEtapas.xaml
+++ b/YPA/Views/VerEtapas.xaml
@@ -27,7 +27,7 @@
                 <StackLayout Orientation="Horizontal" HeightRequest="20" BackgroundColor="#FFE1FAF9" >
                     <Label Text="{Binding miCamino.distanciaTotalMiCamino,StringFormat='Distancia: {0} kms'}" />
                     <Label Text="{Binding miCamino.numDias,StringFormat='Duración: {0} días'}" Padding="10,0,0,0" />
-                    <Label Text="{Binding miCamino.numEtapas,StringFormat=', {0} etapas'}" />
+                    <Label Text="{Binding miCamino.NUMETAPAS,StringFormat=', {0} etapas'}" />
                     
                     <Button Text="INFO" Command="{Binding MostrarInfo,FallbackValue=Funcion no definida}" FontSize="Micro" />
                 </StackLayout>
